--- a/css/style.css
+++ b/css/style.css
@@ -53,8 +53,7 @@ footer p {
     
 }
 
-
-main#banner{
+section#banner{
     width: '100%';
     height: calc(69vh);
     background-image: url(../img/jane.jpg);
@@ -92,22 +91,12 @@ main#about div{
     margin-bottom: 50px;
 }
 
-#lista-about{
-    font-weight: 700;
-}
-
-#lista-index{
-    font-weight: 700;
-}
-
-#lista-music{
-    font-weight: 700;
-}
-
+#lista-about,
+#lista-index,
+#lista-music,
 #lista-contact{
     font-weight: 700;
 }
-
 
 main#music{
     margin-left: 100px;
@@ -123,4 +112,82 @@ main#contact #linha{
     width: 100%;
     height: 2px;
     background-color: #898989;
+}
+
+#conteudo{
+    width: 90%;
+    height: 70vh;
+    margin-left: 120px;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    margin-bottom: 100px;
+}
+
+#imagem-celular{
+    width: 350px;
+    height: 350px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#lista-imagem{
+    width: 50%;
+    font-size: 20px;
+    font-family: 'Raleway', sans-serif;
+    margin: 100px;
+}
+
+#laranja{
+    color: darkorange;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+
+#imagem-lista{
+    width:100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+from#contato-form label{
+    font-size: 20px;
+    font-family: 'Raleway', sans-serif;
+}
+
+#input{
+    width: 350px;
+    height: 30px;
+    border-style: black solid;
+    border-width: 2px;
+    margin-bottom: 10px;
+}
+
+#input-message{
+    width: 350px;
+    height: 50px;
+    border-style: black solid;
+    border-width: 2px;
+    margin-bottom: 40px;
+}
+
+#newslatter{
+    margin-top: 20px;
+}
+
+#button{
+    width: 100px;
+    height: 30px;
+    background-color: darkorange;
+    border-style: none;
+    margin-top: 20px;
+    font-size: 14px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    color: #fff;
 }
